# app/dtos/RefreshToken.go
@@ -1,0 +1,5 @@
+package dtos
+
+type RefreshTokenRequest struct {
+	Token string `json:"token" validate:"jwt"`
+}
