# docs/swagger.json
@@ -12,6 +12,33 @@
         }
     },
     "paths": {
+        "/auth/refreshToken": {
+            "post": {
+                "description": "refresh token to extend token's active period",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Refresh Token",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.RefreshTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/auth/requestToken": {
             "post": {
                 "description": "Request Token for Authorization or you can login with gmail from this link [https://golang-api-6ej0.onrender.com/api/v1/auth/external/google]",
@@ -24,7 +51,7 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Request Token user",
+                "summary": "Request Token",
                 "parameters": [
                     {
                         "description": "body",
@@ -242,6 +269,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.RefreshTokenRequest": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
